Introduced actual lines of code causing the problem

--- a/CameraTest/CameraTest-Info.plist
+++ b/CameraTest/CameraTest-Info.plist
@@ -33,6 +33,9 @@
 	<key>UIStatusBarHidden~ipad</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array/>
+	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 </dict>
 </plist>
